docs: refresh project README and screenshots